--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
       <div class="cart_content">
         <div class="total">
         </div>
-        <div class="total_price">
-          <span>Jami Tolov:</span>
-          <span class="tprice">0 USD</span>
+        <div class="checkout_content">
+          <div class="total_price">
+            <span>Jami Tolov:</span>
+            <span class="tprice">0 USD</span>
+          </div>
+          <ul class="checkout">
+          </ul>
         </div>
-        <ul class="checkout">
-        </ul>
       </div>
     </div>
     <div class="products">
