--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
             <span>Jami Tolov:</span>
             <span class="tprice">0 USD</span>
           </div>
-          <ul class="checkout">
-          </ul>
+          <ul class="checkout"> </ul>
         </div>
       </div>
     </div>
