--- a/index.html
+++ b/index.html
@@ -32,91 +32,21 @@
       </div>
     </div>
     <div class="products">
-      <div class="row">
-        <div class="item">
-          <img
-            src="https://mini-io-api.texnomart.uz/catalog/product/943/94383/171295/031088aa-bf59-4e23-890c-ceb66fbd3f4c.jpg"
-            alt="">
-          <div class="name">Ноутбук Apple MacBook Pro 13 M1 MYD82RU/A</div>
-          <div class="price">100 USD</div>
-          <button>savatchaga qo'shish</button>
-        </div>
-        <div class="item">
-          <img
-            src="https://mini-io-api.texnomart.uz/catalog/product/943/94383/171295/031088aa-bf59-4e23-890c-ceb66fbd3f4c.jpg"
-            alt="">
-          <div class="name">Ноутбук Apple MacBook Pro 13 M1 MYD82RU/A</div>
-          <div class="price">900 USD</div>
-          <button>savatchaga qo'shish</button>
-        </div>
-        <div class="item">
-          <img
-            src="https://mini-io-api.texnomart.uz/catalog/product/943/94383/171295/031088aa-bf59-4e23-890c-ceb66fbd3f4c.jpg"
-            alt="">
-          <div class="name">Ноутбук Apple MacBook Pro 13 M1 MYD82RU/A</div>
-          <div class="price">2000 USD</div>
-          <button>savatchaga qo'shish</button>
-        </div>
-        <div class="item">
-          <img
-            src="https://mini-io-api.texnomart.uz/catalog/product/943/94383/171295/031088aa-bf59-4e23-890c-ceb66fbd3f4c.jpg"
-            alt="">
-          <div class="name">Ноутбук Apple MacBook Pro 13 M1 MYD82RU/A</div>
-          <div class="price">500 USD</div>
-          <button>savatchaga qo'shish</button>
-        </div>
-        <div class="item">
-          <img
-            src="https://mini-io-api.texnomart.uz/catalog/product/943/94383/171295/031088aa-bf59-4e23-890c-ceb66fbd3f4c.jpg"
-            alt="">
-          <div class="name">Ноутбук Apple MacBook Pro 13 M1 MYD82RU/A</div>
-          <div class="price">1900 USD</div>
-          <button>savatchaga qo'shish</button>
-        </div>
-        <div class="item">
-          <img
-            src="https://mini-io-api.texnomart.uz/catalog/product/943/94383/171295/031088aa-bf59-4e23-890c-ceb66fbd3f4c.jpg"
-            alt="">
-          <div class="name">Ноутбук Apple MacBook Pro 13 M1 MYD82RU/A</div>
-          <div class="price">1900 USD</div>
-          <button>savatchaga qo'shish</button>
-        </div>
-        <div class="item">
-          <img
-            src="https://mini-io-api.texnomart.uz/catalog/product/943/94383/171295/031088aa-bf59-4e23-890c-ceb66fbd3f4c.jpg"
-            alt="">
-          <div class="name">Ноутбук Apple MacBook Pro 13 M1 MYD82RU/A</div>
-          <div class="price">1900 USD</div>
-          <button>savatchaga qo'shish</button>
-        </div>
-        <div class="item">
-          <img
-            src="https://mini-io-api.texnomart.uz/catalog/product/943/94383/171295/031088aa-bf59-4e23-890c-ceb66fbd3f4c.jpg"
-            alt="">
-          <div class="name">Ноутбук Apple MacBook Pro 13 M1 MYD82RU/A</div>
-          <div class="price">1900 USD</div>
-          <button>savatchaga qo'shish</button>
-        </div>
-        <div class="item">
-          <img
-            src="https://mini-io-api.texnomart.uz/catalog/product/943/94383/171295/031088aa-bf59-4e23-890c-ceb66fbd3f4c.jpg"
-            alt="">
-          <div class="name">Ноутбук Apple MacBook Pro 13 M1 MYD82RU/A</div>
-          <div class="price">1900 USD</div>
-          <button>savatchaga qo'shish</button>
-        </div>
-        <div class="item">
-          <img
-            src="https://mini-io-api.texnomart.uz/catalog/product/943/94383/171295/031088aa-bf59-4e23-890c-ceb66fbd3f4c.jpg"
-            alt="">
-          <div class="name">Ноутбук Apple MacBook Pro 13 M1 MYD82RU/A</div>
-          <div class="price">1900 USD</div>
-          <button>savatchaga qo'shish</button>
+      <div class="row"></div>
+    </div>
+
+    <div class="overlay">
+      <div class="modal_content">
+        <div class="add_product">
+          <input placeholder="Mahsulot surati" type="url" class="productImage">
+          <input placeholder="Mahsulot nomi" type="text" class="productName">
+          <input placeholder="Mahsulot narxi" type="number" class="productPrice">
+          <button class="addProductInfo">Qo'shish</button>
         </div>
       </div>
     </div>
 
-    <div class="overlay"></div>
+    <audio class="bg_audio" src="music/add.mp3" controls></audio>
     <!-- <i class="fi fi-br-shopping-cart-add"></i> -->
     <script src="js/main.js"></script>
   </div>
