--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
       </div>
     </div>
     <div class="products">
-      <div class="row"></div>
+      <div class="row">
+        <!-- <div class="item">
+          <img
+            src="https://mini-io-api.texnomart.uz/catalog/product/3560/356019/190750/723aa0df-6d1e-4a66-8910-d51697713690-medium.webp">
+          <div class="name">aaaaaaaaaaa</div>
+          <div class="price">2500</div>
+          <button>savatchaga qo'shish</button>
+        </div> -->
+      </div>
     </div>
 
     <div class="overlay">
